# vectorless-rag

./: .gitignore  PLANNING.md  README.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt  run.py  vectorless_rag.db-shm
backend/app/: config.py  main.py
backend/app/api/: auth.py  chat.py  deps.py  files.py  settings.py
backend/app/db/: database.py  models.py
backend/app/services/: ingestion.py  llm.py  queue.py  retrieval.py
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AuthGate.tsx  ChatPanel.tsx  FileContentViewer.tsx  FilePanel.tsx  ModelSelector.tsx  ResizeHandle.tsx  SettingsPanel.tsx  Sidebar.tsx  ThemeProvider.tsx
frontend/src/lib/: api.ts
