[project]
name = "vectorless-rag"
version = "0.1.0"
description = "LLM Tree RAG — no vector embeddings"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.35",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.9",
    "markitdown[all]>=0.1.1",
    "litellm>=1.48.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "alembic>=1.13.0",
    "rank-bm25>=0.2.2",
    "email-validator>=2.3.0",
    "greenlet>=3.5.1",
    "python-dotenv>=1.2.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
